# WeeklyRoulette-Slack-Bot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  fly.toml  go.mod  go.sum  makefile  pyproject.toml  requirements.txt
cmd/weeklyroulette/: main.go
internal/bot/: bot.go
internal/config/: config.go
internal/database/: models.go  repository.go
internal/handlers/: actions.go  commands.go  events.go
internal/services/: anthropic.go  roulette.go  scheduler.go
src/: __init__.py  bot.py  main.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  connection.py  models.py
src/handlers/: actions.py  commands.py  events.py
src/services/: __init__.py  anthropic_service.py  roulette.py  scheduler.py
src/weeklyroulette_bot/: __init__.py  bot.py  main.py
src/weeklyroulette_bot/database/: __init__.py  connection.py  models.py
src/weeklyroulette_bot/handlers/: __init__.py  actions.py  commands.py  events.py
src/weeklyroulette_bot/services/: __init__.py  roulette.py  scheduler.py
tests/: test_anthropic.py  test_basic.py
