[project]
name = "weeklyroulette-bot"
version = "0.1.0"
description = ""
authors = [{ name = "Jakub Wilk", email = "jwilk436@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt (>=1.23.0,<2.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]

[tool.poetry]
name = "weeklyroulette-bot"
version = "0.1.0"
description = "Slack bot for weekly random user selection"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "weeklyroulette_bot", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.23.0"
schedule = "^1.2.2"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
weeklyroulette = "weeklyroulette_bot.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
